k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phishing-detector
  labels:
    name: phishing-detector

    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
